Fixed gear heading (added overflow: hidden to prior container).

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -3,6 +3,9 @@
 	transition: 0.3s;
 }
 
+.charMainContainer {
+    overflow: hidden;
+}
 
 .charContainer {
     float: left;
